API was created

--- a/templates/single_prediction.html
+++ b/templates/single_prediction.html
@@ -16,6 +16,7 @@
         <input type="number" id="time" name="time" required>
         <br><br>
         <button type="submit">Predict</button>
+        <button onclick="window.location.href='/batch'; return false;">Predict For Batch</button>
         <br><br>
         <h2 id="result"></h2>
     </form>
